fixed media query to allow for responsiveness on mobile and tablet

--- a/style.css
+++ b/style.css
@@ -146,17 +146,17 @@ video {
   }
 }
 
-@media only screen and (max-width: 1250px) {
+@media only screen and (max-device-width: 1250px) {
   body {
     background-image: url(./Media/mortal-kombat-lg.jpg);
   }
 
   .tic-tac-toe {
-    margin-top: 0;
+    margin-top: -3%;
   }
 
   #headers {
-    margin-top: 9%;
+    margin-top: 7%;
   }
 
   .title {
@@ -175,7 +175,7 @@ video {
   }
 }
 
-@media only screen and (max-width: 900px) {
+@media only screen and (max-device-width: 900px) {
   body {
     background-image: url(./Media/mortal-kombat-md.png);
   }
@@ -202,7 +202,7 @@ video {
   }
 }
 
-@media only screen and (max-width: 700px) {
+@media only screen and (max-device-width: 570px) {
   body {
     background-image: url(./Media/mortal-kombat-sm.jpeg);
   }
@@ -247,7 +247,7 @@ video {
 
   #reset {
     width: 70vw;
-    height: 35px;
-    font-size: 16px;
+    height: 50px;
+    font-size: 26px;
   }
 }
